--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,8 @@ services:
     ports: 
       - "${APP_HTTP_PORT:-80}:80"
       - "${APP_HTTPS_PORT:-443}:443"
+      - 8080:8080
+      - 9090:9090
     networks:
       - topgolf  
     volumes: 
@@ -85,31 +87,37 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
-    ports:
-    - 9090:9090
+    #ports:
+    #  - 9090:9090
     command:
-    - --config.file=/etc/prometheus/prometheus.yml
+      - --config.file=/etc/prometheus/prometheus.yml
     volumes:
-    - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     depends_on:
-    - cadvisor
+      - cadvisor
+    networks:
+      - topgolf
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
-    ports:
-    - 8080:8080
+    #ports:
+    #  - 8080:8080
     volumes:
-    - /:/rootfs:ro
-    - /var/run:/var/run:rw
-    - /sys:/sys:ro
-    - /var/lib/docker/:/var/lib/docker:ro
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
     depends_on:
-    - redis
+      - redis
+    networks:
+      - topgolf
   redis:
     image: redis:latest
     container_name: redis
-    ports:
-    - 6379:6379
+    #ports:
+    #  - 6379:6379
+    networks:
+      - topgolf
 volumes:
   logic-flow:
   node-red-context:
