--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,3 +4,8 @@ scrape_configs:
   static_configs:
   - targets:
     - cadvisor:8080
+- job_name: nodeexporter
+  scrape_interval: 5s
+  static_configs:
+  - targets: 
+    - nodeexporter:9100
