commented out cadvisor and dependents

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,34 +89,34 @@ services:
       - 9001:9001
     networks:
       - topgolf
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: monitoring_prometheus
-    expose:
-      - 9090
-    command:
-      - --config.file=/etc/prometheus/prometheus.yml
-    volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-    links: 
-      - cadvisor:cadvisor
-      - nodeexporter:nodeexporter
-    networks:
-      - topgolf
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor:latest
-    container_name: monitoring_cadvisor
-    expose:
-      - 8080
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:rw
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-    depends_on:
-      - redis
-    networks:
-      - topgolf
+  #prometheus:
+  #  image: prom/prometheus:latest
+  #  container_name: monitoring_prometheus
+  #  expose:
+  #    - 9090
+  #  command:
+  #    - --config.file=/etc/prometheus/prometheus.yml
+  #  volumes:
+  #    - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+  #  links:
+  #    - cadvisor:cadvisor
+  #    - nodeexporter:nodeexporter
+  #  networks:
+  #    - topgolf
+  #cadvisor:
+  #  image: gcr.io/cadvisor/cadvisor:latest
+  #  container_name: monitoring_cadvisor
+  #  expose:
+  #    - 8080
+  #  volumes:
+  #    - /:/rootfs:ro
+  #    - /var/run:/var/run:rw
+  #    - /sys:/sys:ro
+  #    - /var/lib/docker/:/var/lib/docker:ro
+  #  depends_on:
+  #    - redis
+  #  networks:
+  #    - topgolf
   redis:
     image: redis:latest
     container_name: redis
@@ -124,24 +124,24 @@ services:
     #  - 6379:6379
     networks:
       - topgolf
-  grafana:
-    image: grafana/grafana:latest
-    container_name: monitoring_grafana
-    links:
-      - prometheus:prometheus      
-    expose:
-      - 3000
-    restart: unless-stopped
-    volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning
-      - grafana-data:/var/lib/grafana
-    networks:
-      - topgolf
-    environment:    
-      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-golf}
-      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASS:-charts}
-      - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_LIVE_ALLOWED_ORIGINS = gamecontrolsystem.com:3000,192.168.11.251:3000
+  #grafana:
+  #  image: grafana/grafana:latest
+  #  container_name: monitoring_grafana
+  #  links:
+  #    - prometheus:prometheus
+  #  expose:
+  #    - 3000
+  #  restart: unless-stopped
+  #  volumes:
+  #    - ./grafana/provisioning:/etc/grafana/provisioning
+  #    - grafana-data:/var/lib/grafana
+  #  networks:
+  #    - topgolf
+  #  environment:
+  #    - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-golf}
+  #    - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASS:-charts}
+  #    - GF_USERS_ALLOW_SIGN_UP=false
+  #    - GF_LIVE_ALLOWED_ORIGINS = gamecontrolsystem.com:3000,192.168.11.251:3000
   nodeexporter:
     image: prom/node-exporter:latest
     container_name: monitoring_node_exporter
