--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -92,6 +92,8 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: monitoring_prometheus
+    profiles:
+      - monitoring
     expose:
       - 9090
     command:
@@ -106,6 +108,8 @@ services:
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: monitoring_cadvisor
+    profiles:
+      - monitoring
     expose:
       - 8080
     volumes:
@@ -120,6 +124,8 @@ services:
   redis:
     image: redis:latest
     container_name: redis
+    profiles:
+      - monitoring
     #ports:
     #  - 6379:6379
     networks:
@@ -127,6 +133,8 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: monitoring_grafana
+    profiles:
+      - monitoring
     links:
       - prometheus:prometheus      
     expose:
@@ -145,6 +153,8 @@ services:
   nodeexporter:
     image: prom/node-exporter:latest
     container_name: monitoring_node_exporter
+    profiles:
+      - monitoring
     restart: unless-stopped    
     expose:
       - 9100
