No logic or config storage

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,9 +21,9 @@ services:
     networks:
       - topgolf
     volumes:
-      - ${LOGIC_FLOW:-logic-flow}:/data/projects/logic
+     # - ${LOGIC_FLOW:-logic-flow}:/data/projects/logic
       - node-red-context:/data/context
-      - ${LOGIC_CONFIG:-logic-config}:/data/config
+     # - ${LOGIC_CONFIG:-logic-config}:/data/config
       - ${LOGIC_CUSTOM:-logic-custom}:/data/custom 
       - ${SPEC_SOURCE:-api-spec}:/data/spec:ro
     extra_hosts:
@@ -162,10 +162,10 @@ services:
       - topgolf
 
 volumes:
-  logic-flow:
+ # logic-flow:
   node-red-context:
   logic-custom:
-  logic-config:
+ # logic-config:
   app-source:
   api-spec: 
   database:
